--- a/package.json
+++ b/package.json
@@ -3,9 +3,10 @@
   "version": "1.0.0",
   "private": true,
   "scripts": {
-    "dev": "vite",
-    "build": "vite build",
-    "preview": "vite preview"
+  "dev": "vite",
+  "build": "vite build",
+  "start": "vite preview --port $PORT --host 0.0.0.0"
+
   },
   "dependencies": {
     "react": "^18.2.0",
@@ -19,3 +20,4 @@
     "node": "18.x"
   }
 }
+
